packages/kotlin/ttrp-frontend/src/test/resources/negative/prs-003-positional-join.ttrp
j = join(accounts, sales, on: left.id = right.id)
